# Getting2KnowOS

./: README
elf_loader/elf_loader/: Makefile  apager.c  debug_test  debug_test_disa  debug_test_disa2  dpager.c  helloworld  helloworld.c  hpager.c  hpager_n  hpager_not_predict.c  test1.c  test2.c  test3.c  test4.c
fuse_practice/dustfs/: CMakeLists.txt  README  dustfs.c  dustfs.h
fuse_practice/dustfs/CMake/: FindFUSE.cmake
fuse_practice/dustfs/experiment_code/: run_read_exp.sh  run_write_exp.sh  run_writeread_comb_exp.sh  seq_read.c  seq_write.c  seq_write_read.c
res_tracking/: Makefile  res_tracker.c
